# MobileRobotics

./: README.md
src/IZ_worlds/: IZ_f0.world  IZ_f0.yaml  manifest.xml  rviz_config.rviz
src/unit_01/: CMakeLists.txt  package.xml
src/unit_01/launch/: robo_A_sim.launch  robo_B_sim.launch  robo_C_sim.launch  robo_D_sim.launch
src/unit_01/src/: amcl_subscr.cpp  just_move.cpp  point_navigator.cpp  robo_A.cpp  robo_A_new.cpp  robo_B.cpp  robo_C.cpp  robo_D.cpp
src/unit_02/: CMakeLists.txt  package.xml
src/unit_02/launch/: robo_X_sim.launch
src/unit_02/src/: robo_X.cpp
src/unit_03/: CMakeLists.txt  kanten_prakt_02.txt  kanten_prakt_03.txt  knoten_prakt_03.txt  package.xml
src/unit_03/launch/: robo_3_0_sim.launch  robo_3_6_sim.launch
src/unit_03/src/: a_star-graph.cpp  robo_3_0.cpp  robo_3_1.cpp  robo_3_2.cpp
src/unit_04/: CMakeLists.txt  package.xml
src/unit_04/launch/: guess.launch  guess2.launch
src/unit_04/src/: guess_01.cpp  guess_02.cpp
